# skriptiohjelmointi

./: .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  siteinfo.json  siteinfo.json.schema
ansible/31_gallium/: index.html
ansible/38_strontium/: index.html
ansible/96_curium/: index.html
ansible/99_einsteinium/: index.html
ansible/aloita/: index.html
ansible/lukeminen/: index.html
bash/31_gallium/: index.html
bash/38_strontium/: index.html
bash/96_curium/: index.html
bash/99_einsteinium/: index.html
bash/aloita/: index.html
bash/lukeminen/: index.html
docs/: .nav.yml  .pages  exercises.md  index.md
docs/ansible/: .nav.yml  31_gallium.md  38_strontium.md  96_curium.md  99_einsteinium.md  aloita.md  lukeminen.md
docs/bash/: .pages  31_gallium.md  38_strontium.md  96_curium.md  99_einsteinium.md  aloita.md  lukeminen.md
docs/powershell/: 31_gallium.md  38_strontium.md  96_curium.md  99_einsteinium.md  aloita.md  lukeminen.md
docs/python/: .pages  31_gallium.md  38_strontium.md  96_curium.md  99_einsteinium.md  aloita.md  lukeminen.md
exercise-assets/data/: premieremarkers.txt
exercise-assets/scripts/: runbash.sh  runpwsh.sh  runpy.py
exercises/: index.html
powershell/31_gallium/: index.html
powershell/38_strontium/: index.html
powershell/96_curium/: index.html
powershell/99_einsteinium/: index.html
powershell/aloita/: index.html
powershell/lukeminen/: index.html
python/31_gallium/: index.html
scripts/: runbash.sh
search/: search_index.json
(+5 files in other folders)
